index-contacts pseudo-element align fix

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -624,10 +624,11 @@ a {
     content: "";
     position: absolute;
     top: 0;
-    left: 0;
+    left: 50%;
     z-index: 1;
-    width: 100%;
+    width: 320px;
     height: 33px;
+    margin-left: -160px;
     background-image: url("../img/bg-triangle-white-footer.svg");
     background-repeat: no-repeat;
     background-position: top center;
